--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "samesies",
-  "homepage": "http://aucoeur.github.io/samesies",
+  "homepage": "http://aucoeur.github.io/matchie_samesies",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
